...
            Text(text = stringResource(R.string.cancel))
        }

        CorneredFlatButton(
            modifier = Modifier
                .aspectRatio(2.5f)
                .testTag("history:clear"),
            onClick = onClearClick
        ) {
            Text(text = stringResource(R.string.clear))
        }
    }

...
                text = stringResource(R.string.nothing_to_show)
            )
        } else {
            LazyColumn(
                modifier = Modifier
                    .align(Alignment.BottomCenter)
                    .testTag("history:items"),
                state = rememberLazyListState(
                    initialFirstVisibleItemIndex = historyItemsByDate.size * 2
                ),
                contentPadding = PaddingValues(top = 8.dp)
            ) {
                historyItemsByDate.onEachIndexed { index, (date, calculations) ->
...
