...
                .horizontalScroll(
                    state = expressionScrollState,
                    reverseScrolling = true
                )
                .padding(horizontal = 20.dp)
                .alpha(ContentAlpha.medium)
                .testTag("calculator:expression"),
            text = mathExpression.formatNumbers(),
            style = MaterialTheme.typography.h5.copy(
                fontWeight = FontWeight.Light,
            ),
            textAlign = TextAlign.Center,
        )
...
                    modifier = Modifier
                        .horizontalScroll(
                            state = resultScrollState,
                            reverseScrolling = true
                        )
                        .padding(horizontal = 20.dp)
                        .testTag("calculator:result"),
                    text = evaluationResult.formatNumbers(),
                    style = MaterialTheme.typography.h3.copy(
                        fontWeight = FontWeight.Normal,
                    ),
                )
            }
...
